# Task-Tracker

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: cache.py  config.py  crud.py  database.py  enums.py  exceptions.py  main.py  models.py  schemas.py
app/api/: tasks.py
tests/: conftest.py  test_tasks.py
